# IMO

./: .gitattributes  .gitignore  .gitmodules  README.md
lab/: CMakeLists.txt  main_lab1.cpp  main_lab2.cpp  main_lab3.cpp  results_lab1.cpp  results_lab2.cpp  results_lab3.cpp  results_lab4.cpp  results_lab5.cpp  results_lab6.cpp  results_lab7.cpp
lab/debug/: AsiaPiotrekCompany_run  AsiaPiotrekTeam_run  CMakeCache.txt  Makefile  cmake_install.cmake
lab/resultFiles/: healp_20_0.json  healp_20_00.json  results_lab_2.json  results_lab_2_cp.json  results_lab_3.json  results_lab_3_cp.json  results_lab_4.json  results_lab_4_cp.json  results_lab_5.json  results_lab_5_cp.json  results_lab_6_cp.json  results_lab_7.json  results_lab_7_cp.json  test.json
lab/src/: allalgorithms.hpp  allinstances.hpp  cycle.cpp  cycle.hpp  util_functions.cpp  util_functions.hpp
lab/visualization/: Results.ipynb  Visualization.ipynb  Visualization3.ipynb  Visualization4.ipynb  Visualization5.ipynb  sample.json
lab1/: CMakeLists.txt  main.cpp  main_lab2.cpp  results.cpp
lab1/debug/: AsiaPiotrekCompany_run  CMakeCache.txt  Makefile  cmake_install.cmake
lab1/resultFiles/: test.json
lab1/src/: CMakeLists.txt  Makefile  algorithm.hpp  algorithm2cycles.cpp  algorithm2cycles.hpp  algorithm2regret.cpp  algorithm2regret.hpp  algorithmCycleExpansion.cpp  algorithmCycleExpansion.hpp  algorithmGreedyNN.cpp  algorithmGreedyNN.hpp  allalgorithms.hpp  allsolutions.hpp  cycle.cpp  cycle.hpp  instance.hpp  instanceTSP.cpp  instanceTSP.hpp  main.cpp  program  reading.hpp  solution.hpp  solution2Cycles.cpp  solution2Cycles.hpp
(+51 files in other folders)
